--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,16 +52,18 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: lib/assets/fonts/Roboto-Black.ttf
+        - asset: lib/assets/fonts/Roboto-BlackItalic.ttf
+          # style: italic
+          # weight: 900
+    - family: Averta
+      fonts:
+        - asset: lib/assets/fonts/averta-light-webfont.ttf
+        - asset: lib/assets/fonts/averta-regular-webfont.ttf
+        - asset: lib/assets/fonts/averta-semibold-webfont.ttf
   #         weight: 700
   #
   # For details regarding fonts from package dependencies,
