--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   flutter_bloc: ^0.11.1
   flutter_svg: ^0.6.0
+  connectivity: ^0.4.3+1
 
 
 dev_dependencies:
