--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_bloc: ^0.11.1
   flutter_svg: ^0.6.0
   connectivity: ^0.4.3+1
+  equatable: ^0.2.3
 
 
 dev_dependencies:
