--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   flutter_svg: ^0.6.0
   connectivity: ^0.4.3+1
   equatable: ^0.2.3
-
+  http: ^0.12.0+2
 
 dev_dependencies:
   flutter_test:
