--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,9 @@ jobs:
     steps:
       - checkout
       - run: flutter doctor
+      - run:
+          name: Run fastlane test
+          command: cd ./android/fastlane && bundle exec fastlane test
       
 
 workflows:
