update config file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,9 @@ jobs:
       - checkout
       - run: flutter doctor
       - run:
+          name: Install Nokogiri
+          command: sudo gem install nokogiri -v '1.6.7.1'
+      - run:
           name: Install missing gems
           command: cd ./android && bundle install
       - run:
