--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - run: flutter doctor
       - run:
           name: Install dependencies
-          command: apt-get install openssl ruby-openssl libssl-dev
+          command: sudo apt-get install openssl ruby-openssl libssl-dev
       - run:
           name: Install Nokogiri
           command: sudo gem install nokogiri -v '1.6.7.1'
