--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - run: flutter doctor
       - run: 
           name: Install Nokogiri
-          command: cd ./android && bundle config build.nokogiri --use-system-libraries
+          command: cd ./android && sudo apt-get install libxml2-utils
       - run:
           name: Install missing gems
           command: cd ./android && bundle install
