--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       - checkout
       - run:
           name: Install zlib1g
-          command: sudo apt-get install zlib1g-dev
+          command: sudo apt-get update && sudo apt-get install zlib1g-dev
       - run: 
           name: Install missing gems
           command: cd ./android/ && bundle install
